--- a/.github/workflows/pull-request-to-main.yml
+++ b/.github/workflows/pull-request-to-main.yml
@@ -15,6 +15,11 @@ jobs:
         with:
           ref: main
 
+      - name: Get latest changes
+        run: |
+          git fetch origin develop:develop
+          git reset --hard develop
+
       - name: Extrair dados do commit
         uses: rlespinasse/git-commit-data-action@v1.x
 
