--- a/.github/workflows/pull-request-to-main.yml
+++ b/.github/workflows/pull-request-to-main.yml
@@ -33,7 +33,16 @@ jobs:
       - name: Abrir ou Atualizar Pull Request
         run: |
           if [ -z "$PR_NUMBER" ]; then
-            gh pr create -B develop -H main --title 'pr open develop to main' --body 'Created by Github action' --label enhancement
+            uses: peter-evans/create-pull-request@v5
+            with:
+              committer: ${{ env.GIT_COMMIT_AUTHOR_NAME }} <${{ env.GIT_COMMIT_AUTHOR_EMAIL }}>
+              author: ${{ env.GIT_COMMIT_AUTHOR_NAME }} <${{ env.GIT_COMMIT_AUTHOR_EMAIL }}>
+              title: 'PR aberto automaticamente de Develop para Main'
+              body: 'Este PR foi criado automaticamente.'
+              labels: enhancement
+              token: ${{ secrets.GITHUB_TOKEN }}
+              branch: pr-develop-to-main
+              delete-branch: true
           else
             git checkout pr-develop-to-main
             git pull origin main
