--- a/.github/workflows/pull-request-to-main.yml
+++ b/.github/workflows/pull-request-to-main.yml
@@ -33,18 +33,14 @@ jobs:
       - name: Abrir ou Atualizar Pull Request
         run: |
           if [ -z "$PR_NUMBER" ]; then
-            uses: peter-evans/create-pull-request@v5
-            with:
-              committer: ${{ env.GIT_COMMIT_AUTHOR_NAME }} <${{ env.GIT_COMMIT_AUTHOR_EMAIL }}>
-              author: ${{ env.GIT_COMMIT_AUTHOR_NAME }} <${{ env.GIT_COMMIT_AUTHOR_EMAIL }}>
-              title: 'PR aberto automaticamente de Develop para Main'
-              body: 'Este PR foi criado automaticamente.'
-              labels: enhancement
-              token: ${{ secrets.GITHUB_TOKEN }}
-              branch: pr-develop-to-main
-              delete-branch: true
+            npx create-pull-request \
+              --title "PR aberto automaticamente de Develop para Main" \
+              --body "Este PR foi criado automaticamente." \
+              --labels enhancement \
+              --base main \
+              --head develop
           else
-            git checkout pr-develop-to-main
+            git checkout -b pr-develop-to-main
             git pull origin main
             git push origin pr-develop-to-main
           fi
