--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,2 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost/bluesburger?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo&useSSl=false
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql: true
+spring.profiles.active=${RUN_PROFILE}
+spring.jpa.open-in-view=true
