--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,8 @@ services:
       - 33060
     networks:
       - spring-boot-mysql-network
-  aplication:
+  
+  application:
     build:
       context: .
       dockerfile: Dockerfile
@@ -36,9 +37,11 @@ services:
     volumes:
       - db_app:/var/lib/app
     command: [ "java", "-jar", "/var/lib/app/orderingsystem-0.0.1-SNAPSHOT.jar" ]
+
 networks:
   spring-boot-mysql-network:
     driver: bridge
+
 volumes:
   db_data:
   db_app:
