--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -8,5 +8,6 @@ spring.h2.console.path=/h2-console
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.defer-datasource-initialization=true
 
 server.error.include-stacktrace=ON_PARAM
