--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,3 +1,4 @@
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.username=sa
