--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,3 +6,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
 
 spring.jpa.defer-datasource-initialization=true
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
