--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -12,3 +12,4 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
 
 server.error.include-stacktrace=ON_PARAM
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
