ajustes endpoint order e payment

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -6,6 +6,8 @@ spring.datasource.password=
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
 
 server.error.include-stacktrace=ON_PARAM
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
