--- a/k8s/ordering-system-api.yml
+++ b/k8s/ordering-system-api.yml
@@ -12,10 +12,22 @@ spec:
         - containerPort: 8080
       env:
       - name: SPRING_PROFILES_ACTIVE
-        value: "dev"
+        valueFrom:
+          configMapKeyRef:
+            name: db-config
+            key: SPRING_PROFILES_ACTIVE
       - name: SPRING_DATASOURCE_URL
-        value: "jdbc:mysql://svc-ordering-system-database/dbbluesburger"
+        valueFrom:
+          configMapKeyRef:
+            name: db-config
+            key: SPRING_DATASOURCE_URL
       - name: SPRING_DATASOURCE_USERNAME
-        value: "admin"
+        valueFrom:
+          configMapKeyRef:
+            name: db-config
+            key: SPRING_DATASOURCE_USERNAME
       - name: SPRING_DATASOURCE_PASSWORD
-        value: "admin"
+        valueFrom:
+          configMapKeyRef:
+            name: db-config
+            key: SPRING_DATASOURCE_PASSWORD
