Add opaque secrets

--- a/k8s/ordering-system-api.yml
+++ b/k8s/ordering-system-api.yml
@@ -23,11 +23,11 @@ spec:
             key: SPRING_DATASOURCE_URL
       - name: SPRING_DATASOURCE_USERNAME
         valueFrom:
-          configMapKeyRef:
-            name: db-config
+          secretKeyRef:
+            name: ordering-system-opaque
             key: SPRING_DATASOURCE_USERNAME
       - name: SPRING_DATASOURCE_PASSWORD
         valueFrom:
-          configMapKeyRef:
-            name: db-config
+          secretKeyRef:
+            name: ordering-system-opaque
             key: SPRING_DATASOURCE_PASSWORD
