--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,14 +1,13 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost/bluesburger?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo&useSSl=false
+spring.datasource.url=jdbc:mysql://localhost:31306/bluesburger?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo&useSSl=false
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql: true
 
+spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
+
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-spring.sql.init.mode=always
