Add storageClassName to be ok with docs.

--- a/k8s/volumes/ordering-system-pv.yml
+++ b/k8s/volumes/ordering-system-pv.yml
@@ -9,6 +9,7 @@ spec:
     storage: 200Mi
   accessModes:
     - ReadWriteMany
+  storageClassName: local-storage
   persistentVolumeReclaimPolicy: Retain
   hostPath:
         path: /run/desktop/mnt/host/d/_development/postech/ordering-system/volumes/data
