--- a/k8s/deployment-ordering-system-api.yml
+++ b/k8s/deployment-ordering-system-api.yml
@@ -26,6 +26,13 @@ spec:
               port: 8080
             initialDelaySeconds: 30
             periodSeconds: 30
+          readinessProbe:
+            httpGet:
+              path: /api/v1/order/all/PREPARO_INICIADO
+              port: 8080
+            initialDelaySeconds: 30
+            failureThreshold: 3
+            periodSeconds: 30
           env:
           - name: SPRING_PROFILES_ACTIVE
             valueFrom:
