--- a/k8s/deployment-ordering-system-api.yml
+++ b/k8s/deployment-ordering-system-api.yml
@@ -33,6 +33,13 @@ spec:
             initialDelaySeconds: 30
             failureThreshold: 3
             periodSeconds: 30
+          startupProbe:
+            httpGet:
+              path: /api/v1/order/all/PREPARO_INICIADO
+              port: 8080
+            initialDelaySeconds: 30
+            failureThreshold: 6
+            periodSeconds: 30
           env:
           - name: SPRING_PROFILES_ACTIVE
             valueFrom:
