--- a/k8s/deployment-ordering-system-api.yml
+++ b/k8s/deployment-ordering-system-api.yml
@@ -40,6 +40,9 @@ spec:
               port: 8080
             initialDelaySeconds: 30
             periodSeconds: 30
+          resources:
+            requests:
+              cpu: 1m
           env:
           - name: SPRING_PROFILES_ACTIVE
             valueFrom:
