--- a/k8s/blues-burguer.yaml
+++ b/k8s/blues-burguer.yaml
@@ -38,5 +38,15 @@ spec:
             - name: SPRING_DATASOURCE_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: dados
+                  name: senhas
                   key: SPRING_DATASOURCE_PASSWORD
+            - name: DB_DATABASE
+              valueFrom:
+                configMapKeyRef:
+                  name: dados
+                  key: DB_DATABASE
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: senhas
+                  key: DB_PASSWORD
