--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 stringData:
   SPRING_DATASOURCE_PASSWORD: "admin"
+  DB_PASSWORD: "123456"
 kind: Secret
 metadata:
   name: senhas
