--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 stringData:
-  SPRING_DATASOURCE_PASSWORD: "admin"
-  DB_PASSWORD: "123456"
+  SPRING_DATASOURCE_PASSWORD: "12345"
+  DB_PASSWORD: "12345"
+  MYSQL_PASSWORD: "admin"
 kind: Secret
 metadata:
   name: senhas
