--- a/k8s/mysql.yaml
+++ b/k8s/mysql.yaml
@@ -2,27 +2,32 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
+  name: mysql  # DNS name
   labels:
     app: mysql
+    tier: database
 spec:
   ports:
     - port: 3306
-      name: mysql
-  clusterIP: None
-  selector:
+      targetPort: 3306
+  selector:       # mysql Pod Should contain same labels
     app: mysql
-
+    tier: database
+  clusterIP: None  # We Use DNS, Thus ClusterIP is not relevant
 ---
 
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: mysql
+  labels:
+    app: mysql
+    tier: database
 spec:
   selector:
     matchLabels:
       app: mysql
+      tier: database
   serviceName: "mysql"
   replicas: 1
   minReadySeconds: 10
@@ -30,39 +35,41 @@ spec:
     metadata:
       labels:
         app: mysql
+        tier: database
     spec:
       terminationGracePeriodSeconds: 10
       containers:
-        - name: mysql
-          image: mysql:latest
+        - image: mysql:latest
+          name: mysql
+          env:
+            - name: MYSQL_ROOT_PASSWORD
+              valueFrom :
+                secretKeyRef :
+                  name : senhas
+                  key :  password
+
+            - name: MYSQL_DATABASE
+              valueFrom :
+                configMapKeyRef :
+                  name : dados
+                  key :  dbName
+#            - name: MYSQL_USER
+#              valueFrom:
+#                configMapKeyRef:
+#                  name: dados
+#                  key: MYSQL_USER
+#            - name: MYSQL_PASSWORD
+#              valueFrom:
+#                secretKeyRef:
+#                  name: senhas
+#                  key: MYSQL_PASSWORD
           ports:
             - containerPort: 3306
               name: mysql
-          env:
-            - name: MYSQL_DATABASE
-              valueFrom:
-                configMapKeyRef:
-                  name: dados
-                  key: DB_DATABASE
-            - name: MYSQL_USER
-              valueFrom:
-                configMapKeyRef:
-                  name: dados
-                  key: MYSQL_USER
-            - name: MYSQL_ROOT_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: senhas
-                  key: DB_PASSWORD
-            - name: MYSQL_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: senhas
-                  key: MYSQL_PASSWORD
           volumeMounts:
-            - name: mysql-ps
+            - name: mysql-persistent-storage
               mountPath: /var/lib/mysql
       volumes:
-        - name: mysql-ps
+        - name: mysql-persistent-storage
           persistentVolumeClaim:
             claimName: volume-mysql
