--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -1,9 +1,10 @@
-apiVersion: v1
-stringData:
-  SPRING_DATASOURCE_PASSWORD: "12345"
-  DB_PASSWORD: "12345"
-  MYSQL_PASSWORD: "admin"
-kind: Secret
+apiVersion : v1
+kind : Secret
 metadata:
-  name: senhas
+  name : senhas
 type: Opaque
+data:
+  username : cm9vdA==
+  password : cm9vdA==
+  #MYSQL_PASSWORD : YWRtaW4=
+  SPRING_DATASOURCE_PASSWORD : cm9vdA==
