--- a/k8s/volume.yaml
+++ b/k8s/volume.yaml
@@ -1,12 +1,15 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: volume-mysql
+  name: volume-mysql # name of PVC essential for identifying the storage data
+  labels:
+    app: mysql
+    tier: database
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteOnce   #This specifies the mode of the claim that we are trying to create.
   volumeMode: Filesystem
   resources:
     requests:
-      storage: 15Gi
+      storage: 15Gi    #This will tell kubernetes about the amount of space we are trying to claim.
   storageClassName: csi-hostpath-sc
