health check application

--- a/k8s/blues-burguer.yaml
+++ b/k8s/blues-burguer.yaml
@@ -61,4 +61,9 @@ spec:
                 secretKeyRef:
                   name: senhas
                   key: SPRING_DATASOURCE_PASSWORD
-
+          livenessProbe:
+            httpGet:
+              path: /api/v1/menu
+              port: 8080
+            initialDelaySeconds: 180
+            periodSeconds: 5
