--- a/k8s/nodeport.yaml
+++ b/k8s/nodeport.yaml
@@ -7,6 +7,6 @@ spec:
   selector:
     app: bluesburguer
   ports:
-    - port: 8080
-      targetPort: 8080
+    - protocol: TCP
+      port: 8080
       nodePort: 30000
