--- a/k8s/blues-burguer.yaml
+++ b/k8s/blues-burguer.yaml
@@ -56,11 +56,11 @@ spec:
                 configMapKeyRef:
                   name: dados
                   key: SPRING_DATASOURCE_USERNAME
-            - name: REDIS_HOST
-              valueFrom:
-                configMapKeyRef:
-                  name: dados
-                  key: REDIS_HOST
+#            - name: REDIS_HOST
+#              valueFrom:
+#                configMapKeyRef:
+#                  name: dados
+#                  key: REDIS_HOST
             - name: SPRING_DATASOURCE_PASSWORD
               valueFrom:
                 secretKeyRef:
@@ -72,10 +72,13 @@ spec:
               port: 8080
             initialDelaySeconds: 180
             periodSeconds: 5
-          readinessProbe:
-            httpGet:
-              port: 8080
-              path: /swagger-ui/
-            periodSeconds: 10
-            failureThreshold: 5
-            initialDelaySeconds: 60
+#          readinessProbe:
+#            httpGet:
+#              port: 8080
+#              path: /swagger-ui/
+#            periodSeconds: 10
+#            failureThreshold: 5
+#            initialDelaySeconds: 180
+          resources:
+            requests:
+              cpu: 1000m
