--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
 version: '3.8'
 services:
   dbmysql:
-    image: mysql:latest
-    container_name: bdbluesburger
-    command: --skip-name-resolve --host-cache-size=0
+    image: mysql:8.0
+    container_name: dbbluesburger
     volumes:
       - db_data:/var/lib/mysql
     restart: always
@@ -30,6 +29,11 @@ services:
       - "8181:8080"
     networks:
       - spring-boot-mysql-network
+    healthcheck:
+      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
     depends_on:
       - dbmysql
     environment:
