Refatoração de configuração do K8S

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,3 +11,5 @@ spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+logging.file = logs/logfile.log
