--- a/k8s/volume.yaml
+++ b/k8s/volume.yaml
@@ -13,3 +13,12 @@ spec:
     requests:
       storage: 15Gi    #This will tell kubernetes about the amount of space we are trying to claim.
   storageClassName: csi-hostpath-sc
+---
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: csi-hostpath-sc
+provisioner: docker.io/hostpath
+reclaimPolicy: Delete
+volumeBindingMode: Immediate
+allowVolumeExpansion: false
