--- a/k8s/volume.yaml
+++ b/k8s/volume.yaml
@@ -1,4 +1,23 @@
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: pv-mysql
+  labels:
+    app: mysql
+    tier: database
+spec:
+  capacity:
+    storage: 15Gi
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: aws-ebs-sc
+  persistentVolumeReclaimPolicy: Retain
+  csi:
+    driver: ebs.csi.aws.com
+    volumeHandle: vol-0c7082c5ce7e0e964
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: volume-mysql # name of PVC essential for identifying the storage data
@@ -12,31 +31,13 @@ spec:
   resources:
     requests:
       storage: 15Gi    #This will tell kubernetes about the amount of space we are trying to claim.
-  storageClassName: csi-hostpath-sc
+  storageClassName: aws-ebs-sc
 ---
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: csi-hostpath-sc
+  name: aws-ebs-sc
 provisioner: docker.io/no-provisioner
 reclaimPolicy: Retain
 volumeBindingMode: WaitForFirstConsumer
 allowVolumeExpansion: false
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: pv-mysql
-  labels:
-    app: mysql
-    tier: database
-spec:
-  capacity:
-    storage: 15Gi
-  volumeMode: Filesystem
-  accessModes:
-    - ReadWriteOnce
-  hostPath:
-    path: "/run/desktop/mnt/host/d/_development/postech/ordering-system/volumes/data"
-  storageClassName: csi-hostpath-sc
-  persistentVolumeReclaimPolicy: Retain
