Correção de docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,10 +24,10 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: amazoncorretto:11-al2023-jdk
+    image: fernandomqs/ordering-system:2.0
     container_name: application-java
     ports:
-      - "8181:8080"
+      - "30000:8080"
     networks:
       - spring-boot-mysql-network
     depends_on:
