--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: 123456
-      MYSQL_DATABASE: dbbluesburger
+      MYSQL_DATABASE: bluesburger
       MYSQL_USER: admin
       MYSQL_PASSWORD: admin
     ports:
@@ -34,7 +34,7 @@ services:
       - dbmysql
     environment:
       - SPRING_PROFILES_ACTIVE=dev
-      - SPRING_DATASOURCE_URL=jdbc:mysql://dbmysql:3306/dbbluesburger
+      - SPRING_DATASOURCE_URL=jdbc:mysql://dbmysql:3306/bluesburger
       - SPRING_DATASOURCE_USERNAME=admin
       - SPRING_DATASOURCE_PASSWORD=admin
     volumes:
