--- a/.github/workflows/tf_plan.yml
+++ b/.github/workflows/tf_plan.yml
@@ -40,7 +40,13 @@ jobs:
 
       - name: Terraform Init
         id: init
-        run: terraform -chdir=terraform init
+        run: |
+          export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
+          export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
+          export AWS_REGION=$AWS_REGION
+          export AWS_ACCOUNT_ID=$AWS_ACCOUNT_ID
+          
+          terraform -chdir=terraform init
 
       - name: Terraform Validate
         id: validate
