--- a/.github/workflows/tf_plan.yml
+++ b/.github/workflows/tf_plan.yml
@@ -41,6 +41,7 @@ jobs:
       - name: Terraform Init
         id: init
         run: |
+          export AWS_SDK_LOAD_CONFIG=1
           export TF_VAR_AWS_ACCESS_KEY_ID=$TF_VAR_AWS_ACCESS_KEY_ID
           export TF_VAR_AWS_SECRET_ACCESS_KEY=$TF_VAR_AWS_SECRET_ACCESS_KEY
           export TF_VAR_AWS_REGION=$TF_VAR_AWS_REGION
