--- a/.github/workflows/tf_plan.yml
+++ b/.github/workflows/tf_plan.yml
@@ -3,7 +3,7 @@ name: Terraform Push Docker Image to AWS ECR
 on:
   push:
     branches:
-      - '*'
+      - 'main'
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
