--- a/k8s/mysql.yaml
+++ b/k8s/mysql.yaml
@@ -13,7 +13,7 @@ spec:
   selector:       # mysql Pod Should contain same labels
     app: mysql
     tier: database
-  clusterIP: None  # We Use DNS, Thus ClusterIP is not relevant
+  type: NodePort
 ---
 
 apiVersion: apps/v1
